section 4 and 5 done

--- a/src/Components/Section2/Imagecomponent.css
+++ b/src/Components/Section2/Imagecomponent.css
@@ -30,3 +30,9 @@
 .know-more a:hover {
   color: #b78e5c;
 }
+.images-comp .imge img:hover {
+  cursor: pointer;
+}
+.images-comp .min-head h2:hover {
+  cursor: pointer;
+}
